k8/deployment-kleinanzeigen.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: kleinanzeigen
  namespace: kleinanzeigen
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: kleinanzeigen
    spec:
      containers:
        - name: kleinanzeigen
          image: 'torgejuergensen/kleinanzeigen'
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 500m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 128Mi
          ports:
            - containerPort: 30
