k8/service-kleinanzeigen.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: kleinanzeigen
  labels:
    app: api
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    app: api
